--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Pagina Hostata da GitHub Pages </h1>
+<p>Quseto è un ocumento che indica l'editore utilizzato per i sottotitoli del video, i punti di forza e di debolezza riscontrati e se ci sono stati problemi con l'utilizzo di Github.</p>
+<h2>Editor utilizzato:</h2>
+<p>Blocco Note (txt file)</p>
+<h3>Punti di forza:</h3>
+<ul>
+    <li></li>
+</ul>
+<h4>Punti di debolezza:</h4>
+<ul>
+    <li>Scrittura obbligatoria del minutaggio di inizio e fine del sottotitolo.</li>
+</ul>
+<p>Non ci sono stati problemi con l'utilizzo di Github.</p>
 </body>
 </html>
