--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Pagina Hostata da GitHub Pages </h1>
-<p>Quseto è un ocumento che indica l'editore utilizzato per i sottotitoli del video, i punti di forza e di debolezza riscontrati e se ci sono stati problemi con l'utilizzo di Github.</p>
+<p>Quseto è un documento che indica l'editore utilizzato per i sottotitoli del video, i punti di forza e di debolezza riscontrati e se ci sono stati problemi con l'utilizzo di Github.</p>
 <h2>Editor utilizzato:</h2>
 <p>Blocco Note (txt file)</p>
 <h3>Punti di forza:</h3>
