--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <h2>Editor utilizzato:</h2>
 <p>Blocco Note (txt file)</p>
 <h3>Punti di forza:</h3>
-<ul>
+<ul type="square">
     <li></li>
 </ul>
 <h4>Punti di debolezza:</h4>
-<ul>
+<ul type="square">
     <li>Scrittura obbligatoria del minutaggio di inizio e fine del sottotitolo.</li>
 </ul>
 <p>Non ci sono stati problemi con l'utilizzo di Github.</p>
