--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 <p>Blocco Note (txt file)</p>
 <h3>Punti di forza:</h3>
 <ul>
-    <li></li>
+    <li>Semplicità nell'uso</li>
+    <li>Tutti lo possono fare.</li>
 </ul>
 <h4>Punti di debolezza:</h4>
 <ul>
-    <li>Scrittura obbligatoria del minutaggio di inizio e fine del sottotitolo.</li>
+    <li>Scrittura obbligatoria del minutaggio di inizio e fine del sottotitolo, quindi perdita di tempo e "fatica".</li>
 </ul>
 <p>Non ci sono stati problemi con l'utilizzo di Github.</p>
 </body>
